# rust-exercises

./: .gitignore  README.md
01-saying-hello/: Cargo.toml
01-saying-hello/src/: main.rs
31-karvonen-heart-rate/: Cargo.toml
31-karvonen-heart-rate/src/: args.yml  main.rs
48-grabbing-the-weather/: Cargo.toml
48-grabbing-the-weather/src/: args.yml  main.rs
54-url-shortener/: Cargo.toml
54-url-shortener/src/: main.rs
54-url-shortener/templates/: form.index.hbs  short.index.hbs
saying-hello/src/: main.rs
