[package]
name = "url-shortener"
version = "0.0.1"
authors = ["cjstehno <chris@stehno.com>"]

[dependencies]
rocket = "0.3.3"
rocket_codegen = "0.3.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
base64 = "0.7.0"
rusqlite = "0.12.0"

[dependencies.rocket_contrib]
version = "0.3.3"
default-features = false
features = ["handlebars_templates"]